<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Pokédex</string>
    <!--Pokemon List -->
    <string name="pokedex">Pokédex</string>
    <string name="pokedex_Info">Search for Pokémon by name or using the National Pokédex number.</string>
    <string name="pokedex_search_hint">What Pokémon are you looking for?</string>
    <!--Pokemon tab info name -->
    <string name="about">About</string>
    <string name="stats">Stats</string>
    <string name="evolution">Evolution</string>
    <!--Pokemon about fragment-->
    <string name="pokemon_data">Pokédex Data</string>
    <string name="pokemon_height">Height:</string>
    <string name="pokemon_weight">Weight:</string>
    <string name="pokemon_type">Type:</string>
    <string name="pokemon_abilities">Abilities:</string>
    <string name="pokemon_moves">Moves:</string>
    <!--Pokemon stat fragment-->
    <string name="pokemon_stats">Base Stats</string>
    <string name="Hp">Hp</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="Sp.Atk">Sp.Atk</string>
    <string name="Sp.Def">Sp.Def</string>
    <string name="speed">Speed</string>
    <string name="total">Total</string>
    <!--Progress Dialog-->
    <string name="loading">Loading.....</string>
</resources>