<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menupokeball"
    tools:context=".ui.pokemonList.view.PokemonList">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:text="@string/pokedex"
        android:textStyle="bold"
        android:textSize="27sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15sp"
        android:textColor="@color/black"
        android:text="@string/pokedex_Info"
        android:textStyle="normal"
        android:textSize="16sp" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="50dp"
        android:queryHint="@string/pokedex_search_hint"
        android:queryBackground="@android:color/transparent"
        android:theme="@style/AppSearchView"
        android:background="@drawable/rounded_searchbar"
        android:iconifiedByDefault="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pokemon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:clipToPadding="false"
        tools:listitem="@layout/pokemon_item"
        />
</LinearLayout>


