<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pokemonDetail.fragments.StatFragment.view.StatFragment"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_BaseStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_stats"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Hp"/>
        <TextView
            android:id="@+id/tv_pokemonHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="79sp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pb_pokemonHp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7sp"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            app:trackCornerRadius="10dp"
            app:trackThickness="10dp"
            app:trackColor="@color/trackColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/attack"/>
        <TextView
            android:id="@+id/tv_pokemonAtk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pb_pokemonAtk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7sp"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            app:trackCornerRadius="10dp"
            app:trackThickness="10dp"
            app:trackColor="@color/trackColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/defense"/>
        <TextView
            android:id="@+id/tv_pokemonDef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37sp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pb_pokemonDef"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7sp"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            app:trackCornerRadius="10dp"
            app:trackThickness="10dp"
            app:trackColor="@color/trackColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Sp.Atk"/>
        <TextView
            android:id="@+id/tv_pokemonSpAtk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pb_pokemonSpAtk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7sp"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            app:trackCornerRadius="10dp"
            app:trackThickness="10dp"
            app:trackColor="@color/trackColor"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Sp.Def"/>
        <TextView
            android:id="@+id/tv_pokemonSpDef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pb_pokemonSpDef"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7sp"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            app:trackCornerRadius="10dp"
            app:trackThickness="10dp"
            app:trackColor="@color/trackColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/speed"/>
        <TextView
            android:id="@+id/tv_pokemonSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52sp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pb_pokemonSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7sp"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            app:trackCornerRadius="10dp"
            app:trackThickness="10dp"
            app:trackColor="@color/trackColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/total"/>
        <TextView
            android:id="@+id/tv_pokemonTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62sp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />

    </LinearLayout>


</LinearLayout>